# spi-memory

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
examples/: asynch.rs  dump.rs  stm32f7.rs  sync.rs  write_verify_async.rs
src/: error.rs  lib.rs  log.rs  series25.rs  utils.rs
