[package]
name = "spi-memory"
version = "0.2.9"
authors = ["Jonas Schievink <jonasschievink@gmail.com>", "Henrik Böving <hargonix@gmail.com>", "David O'Connor <the_alchemist@fastmail.com>", "Diego Frenoux <diego@churrosoft.ar>"]
edition = "2018"
description = "A generic driver for different SPI Flash and EEPROM chips"
documentation = "https://docs.rs/spi-memory/"
repository = "https://github.com/Churrosoft/spi-memory"
keywords = ["embedded-hal-driver", "serial", "flash", "eeprom", "spi"]
categories = ["embedded"]
readme = "README.md"
license = "0BSD"

[dependencies]
embedded-hal = "0.2.5"
log = { version = "0.4.6", optional = true }
bitflags = "1.0.4"

[dev-dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
stm32f4xx-hal = { version = "0.7.0", features = ["stm32f401"] }
panic-semihosting = "0.5.2"

[profile.dev]
opt-level = "z"
panic = "abort"
