[package]
name = "spi-memory"
version = "0.2.9"
authors = ["Jonas Schievink <jonasschievink@gmail.com>", "Henrik Böving <hargonix@gmail.com>", "David O'Connor <the_alchemist@fastmail.com>", "Diego Frenoux <diego@churrosoft.ar>", "Malte Brieske <mail@mbrieske.de>"]
edition = "2024"
description = "A generic driver for different SPI Flash and EEPROM chips"
documentation = "https://docs.rs/spi-memory/"
repository = "https://github.com/Churrosoft/spi-memory"
keywords = ["embedded-hal-driver", "serial", "flash", "eeprom", "spi"]
categories = ["embedded"]
readme = "README.md"
license = "0BSD"

[dependencies]
embedded-hal = "1.0.0"
log = { version = "0.4.27", optional = true }
bitflags = "2.9.1"

[profile.dev]
opt-level = "z"
panic = "abort"
