[package]
name = "spi-memory"
version = "0.2.9"
authors = ["Jonas Schievink <jonasschievink@gmail.com>", "Henrik Böving <hargonix@gmail.com>", "David O'Connor <the_alchemist@fastmail.com>", "Diego Frenoux <diego@churrosoft.ar>", "Malte Brieske <mail@mbrieske.de>"]
edition = "2024"
description = "A generic driver for different SPI Flash and EEPROM chips"
documentation = "https://docs.rs/spi-memory/"
repository = "https://github.com/swobbee-dev/spi-memory"
keywords = ["embedded-hal-driver", "serial", "flash", "eeprom", "spi"]
categories = ["embedded"]
readme = "README.md"
license = "0BSD"

[dependencies]
embedded-hal = "1.0.0"
log = { version = "0.4.27", optional = true }
bitflags = "2.9.1"
embedded-hal-async = "1.0.0"
maybe-async = "0.2.10"

[dev-dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
cortex-m-semihosting = "0.5.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
embassy-embedded-hal = "0.3.0"
embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32f765vg", "time-driver-any", "exti", "unstable-pac", "memory-x"] }
embassy-time = { version = "0.4.0", features = ["defmt", "tick-hz-32_768"] }
heapless = "0.8.0"
embassy-sync = "0.7.0"

[features]
default = ["is_sync"]
is_sync = ["maybe-async/is_sync"]

[profile.dev]
opt-level = "z"
panic = "abort"

[[example]]
name = "sync"
required-features = ["is_sync"]
